--- a/not-synced/pre-commit-config.yaml
+++ b/not-synced/pre-commit-config.yaml
@@ -1,9 +1,7 @@
-# .pre-commit-config.yaml
-
 # run `pre-commit autoupdate` to update tags (`rev`) to the latest versions
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.5.0
     hooks:
       - id: check-added-large-files
         args: ["--maxkb=10000"]
@@ -37,31 +35,33 @@ repos:
         stages: [commit]
       - id: trailing-whitespace
         stages: [commit]
-  - repo: https://github.com/psf/black
-    rev: 23.3.0
-    hooks:
-      - id: black
-        stages: [commit]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.265
+    rev: v0.1.9
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix, --show-fixes]
         stages: [commit]
-        exclude: ^pyproject\.toml$
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.2
-    hooks:
-      - id: pyupgrade
-        args: [--py310-plus]
-        stages: [push]
+      - id: ruff-format
+        stages: [commit]
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v1.2.0
+    rev: v1.8.0
     hooks:
       - id: mypy
         args: [--ignore-missing-imports]
-        stages: [push]
+        stages: [commit]
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.15.0
+    hooks:
+      - id: pyupgrade
+        args: [--py311-plus]
+        stages: [commit]
   - repo: https://github.com/pdm-project/pdm
-    rev: 2.5.3
+    rev: 2.11.1
     hooks:
       - id: pdm-lock-check
+        stages: [commit]
+  - repo: https://github.com/pre-commit/mirrors-prettier
+    rev: v4.0.0-alpha.8
+    hooks:
+      - id: prettier
+        stages: [commit]
