--- a/not-synced/pre-commit-config.yaml
+++ b/not-synced/pre-commit-config.yaml
@@ -30,9 +30,6 @@ repos:
         # test files start with test_ instead of ending with _test
         args: [-h]
         stages: [commit]
-      - id: pretty-format-json
-        args: ["--autofix"]
-        stages: [commit]
       - id: trailing-whitespace
         stages: [commit]
   - repo: https://github.com/charliermarsh/ruff-pre-commit
@@ -64,4 +61,6 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
+        additional_dependencies: [prettier-plugin-tailwindcss@^0.5.7]
         stages: [commit]
+        args: ["--write", "--config .prettierrc.yaml"]
