--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -14,12 +14,32 @@
   "ShortcutMenuBar.toggleTerminal": false,
   "VSCodeCounter.languages": {},
   // SECTION: Language Specific Settings
+  "[css]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "always",
+      "source.organizeImports": "always"
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
+  },
   "[dockerfile]": {
     "editor.codeActionsOnSave": {
       "source.fixAll": "always",
       "source.organizeImports": "always"
     },
     "editor.defaultFormatter": "ms-azuretools.vscode-docker",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true
+  },
+  "[html]": {
+    "editor.codeActionsOnSave": {
+      "source.fixAll": "always",
+      "source.organizeImports": "always"
+    },
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.formatOnType": true
@@ -35,20 +55,12 @@
     "editor.formatOnType": true
   },
   "[json]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll": "always",
-      "source.organizeImports": "always"
-    },
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
     "editor.formatOnType": true
   },
   "[jsonc]": {
-    "editor.codeActionsOnSave": {
-      "source.fixAll": "always",
-      "source.organizeImports": "always"
-    },
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnPaste": true,
     "editor.formatOnSave": true,
@@ -538,10 +550,7 @@
     "strings": "on"
   },
   "editor.quickSuggestionsDelay": 0,
-  "editor.rulers": [
-    90,
-    100
-  ],
+  "editor.rulers": [90, 100],
   "editor.scrollbar.vertical": "visible",
   "editor.scrollbar.verticalScrollbarSize": 10,
   "editor.semanticTokenColorCustomizations": {
@@ -597,9 +606,7 @@
           }
         },
         {
-          "scope": [
-            "support.type.property-name"
-          ], // JSON property names
+          "scope": ["support.type.property-name"], // JSON property names
           "settings": {
             "foreground": "#EECD3A"
           }
@@ -684,18 +691,13 @@
           }
         },
         {
-          "scope": [
-            "markup.raw.texttt.latex",
-            "meta.text.normal.tex"
-          ], // Raw monospace text and normal text in LaTeX
+          "scope": ["markup.raw.texttt.latex", "meta.text.normal.tex"], // Raw monospace text and normal text in LaTeX
           "settings": {
             "foreground": "#00ffff"
           }
         },
         {
-          "scope": [
-            "markup.inline.raw"
-          ], // Raw inline strings in any markup language
+          "scope": ["markup.inline.raw"], // Raw inline strings in any markup language
           "settings": {
             "foreground": "#9effff"
           }
@@ -839,9 +841,7 @@
   "editor.wordBasedSuggestions": "matchingDocuments",
   "editor.wordWrap": "on",
   "editor.wordWrapColumn": 88,
-  "errorLens.excludeBySource": [
-    "sourcery(refactoring:for-append-to-extend)"
-  ],
+  "errorLens.excludeBySource": ["sourcery(refactoring:for-append-to-extend)"],
   // makes code folding for notebook cells in python files possible
   // found in github comment: https://github.com/microsoft/vscode-jupyter/issues/1527#issuecomment-1016056069
   "explicitFolding.rules": {
@@ -907,12 +907,11 @@
   "githubPullRequests.fileListLayout": "tree",
   "githubPullRequests.pullBranch": "never", // Never pull branch for GitHub PRs
   "githubPullRequests.pushBranch": "always",
+  "go.formatTool": "gofmt",
   // SUBSECTION: Go
   "go.inlayHints.compositeLiteralFields": true,
   "go.inlayHints.parameterNames": true,
-  "go.lintFlags": [
-    "--fast"
-  ],
+  "go.lintFlags": ["--fast"],
   "go.lintTool": "golangci-lint",
   "go.toolsManagement.autoUpdate": true,
   "gopls": {
@@ -937,10 +936,7 @@
   "jupyter.interactiveWindow.textEditor.magicCommandsAsComments": true,
   "jupyter.jupyterInterruptTimeout": 100,
   "jupyter.pythonExportMethod": "commentMagics",
-  "jupyter.runStartupCommands": [
-    "%load_ext autoreload",
-    "%autoreload 2"
-  ],
+  "jupyter.runStartupCommands": ["%load_ext autoreload", "%autoreload 2"],
   // SUBSECTION: LaTeX
   "latex-workshop.bibtex-format.sort.enabled": true,
   "latex-workshop.bibtex-format.trailingComma": true,
@@ -1000,16 +996,12 @@
     {
       "command": "multiCommand.RenameFile",
       "label": "⇧F2 Rename Current File",
-      "sequence": [
-        "renameFile"
-      ]
+      "sequence": ["renameFile"]
     },
     {
       "command": "multiCommand.DeleteFile",
       "label": "Delete Current File",
-      "sequence": [
-        "deleteFile"
-      ]
+      "sequence": ["deleteFile"]
     },
     {
       "command": "multiCommand.RevertMarkdownBold",
@@ -1149,24 +1141,17 @@
     {
       "command": "multiCommand.FormatCell",
       "label": "Format Cell of Notebook",
-      "sequence": [
-        "notebook.formatCell"
-      ]
+      "sequence": ["notebook.formatCell"]
     },
     {
       "command": "multiCommand.FormatNotebook",
       "label": "Format Notebook",
-      "sequence": [
-        "notebook.format"
-      ]
+      "sequence": ["notebook.format"]
     },
     {
       "command": "multiCommand.RunCursorDown",
       "label": "⌘↵ / ⌃↵ Run current line in Interactive Window and move Cursor to next line",
-      "sequence": [
-        "jupyter.execSelectionInteractive",
-        "cursorDown"
-      ]
+      "sequence": ["jupyter.execSelectionInteractive", "cursorDown"]
     },
     {
       "command": "multiCommand.RunUntilEmpty",
@@ -1226,10 +1211,7 @@
     {
       "command": "multiCommand.NotebookRunFocusNext",
       "label": "⌃⇧↵ Split Code Cells in Interactive Mode on empty Line and move Cursor to End of Cell",
-      "sequence": [
-        "notebook.cell.executeAndSelectBelow",
-        "notebook.cell.edit"
-      ]
+      "sequence": ["notebook.cell.executeAndSelectBelow", "notebook.cell.edit"]
     },
     {
       "command": "multiCommand.CopyLineNoSelection",
@@ -1327,46 +1309,32 @@
     {
       "command": "multiCommand.QuoteList",
       "label": "Quote each Line in Selected List separately",
-      "sequence": [
-        "extension.quoteList"
-      ]
+      "sequence": ["extension.quoteList"]
     },
     {
       "command": "multiCommand.SortLines",
       "label": "Sort Selected Lines in Ascending Order",
-      "sequence": [
-        "editor.action.sortLinesAscending"
-      ]
+      "sequence": ["editor.action.sortLinesAscending"]
     },
     {
       "command": "multiCommand.SpellCheckerToggle",
       "label": "Toggle Spell Checker",
-      "sequence": [
-        "cSpell.toggleEnableSpellChecker"
-      ]
+      "sequence": ["cSpell.toggleEnableSpellChecker"]
     },
     {
       "command": "multiCommand.SpellCheckerAdd",
       "label": "⌥A Add Word to Spell Checker",
-      "sequence": [
-        "cSpell.addWordToUserDictionary"
-      ]
+      "sequence": ["cSpell.addWordToUserDictionary"]
     },
     {
       "command": "multiCommand.RunRmdChunkAdvance",
       "label": "⌃↵ Run Current R Markdown Chunk and Move Cursor to Next Chunk",
-      "sequence": [
-        "r.runCurrentChunk",
-        "r.goToNextChunk"
-      ]
+      "sequence": ["r.runCurrentChunk", "r.goToNextChunk"]
     },
     {
       "command": "multiCommand.RunQuartoChunkAdvance",
       "label": "⌃↵ Run Current Quarto Code Cell and Move Cursor to Next Code Cell",
-      "sequence": [
-        "quarto.runCurrentCell",
-        "quarto.goToNextCell"
-      ]
+      "sequence": ["quarto.runCurrentCell", "quarto.goToNextCell"]
     },
     {
       "command": "multiCommand.OpenRTerminalRight",
@@ -1407,7 +1375,6 @@
   "postcssSorting.config": {
     "properties-order": "alphabetical"
   },
-  "prettier.requireConfig": true,
   "prettier.trailingComma": "all",
   "projectManager.sortList": "Name",
   // SUBSECTION: Python
@@ -1433,17 +1400,14 @@
   "r.rterm.mac": "/usr/local/bin/R",
   "r.session.levelOfObjectDetail": "Normal",
   "r.workspaceViewer.showObjectSize": true,
-  "rainbow_csv.autodetect_separators": [
-    "\t",
-    ",",
-    "|"
-  ],
+  "rainbow_csv.autodetect_separators": ["\t", ",", "|"],
   "rewrap.wrappingColumn": 88,
   // SUBSECTION: Ruff
   "ruff.lint.run": "onSave",
   "ruff.organizeImports": true,
   "ruff.showNotifications": "onWarning",
   "search.mode": "reuseEditor",
+  "security.promptForLocalFileProtocolHandling": false,
   "security.workspace.trust.enabled": false,
   // SUBSECTION: Toggle Settings
   "settingsOnFire.toggle": {
