--- a/not-synced/github-actions/testing-python.yaml
+++ b/not-synced/github-actions/testing-python.yaml
@@ -1,13 +1,13 @@
-# .github/wokflows/linting.yaml
+# .github/workflows/testing.yaml
 
-name: ruff
+name: pytest
 
 on:
   pull_request:
     branches: [main]
 
 jobs:
-  pre-commit:
+  test:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
 
@@ -29,5 +29,8 @@ jobs:
       - name: Install dependencies
         run: pdm install
 
-      - name: Run ruff linter
-        run: pdm lint
+      - name: Run tests with pytest
+        run: pdm test
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
