--- a/not-synced/prettierrc.yaml
+++ b/not-synced/prettierrc.yaml
@@ -1,3 +1,5 @@
+# .pretterrc.yaml
+
 # Specify the line length that the printer will wrap on.
 printWidth: 80
 
@@ -40,7 +42,7 @@ insertPragma: false
 singleAttributePerLine: false
 
 # Plugins
-plugins: ["prettier-plugin-sql"]
+plugins: ["prettier-plugin-tailwindcss"]
 
 # Override configuration for specific languages and files.
 overrides:
@@ -51,3 +53,8 @@ overrides:
       - "*.yaml"
     options:
       tabWidth: 2
+  - files:
+      - "*.md"
+      - "*.html"
+    options:
+      printWidth: 120
