--- a/vscode/projects.json
+++ b/vscode/projects.json
@@ -141,9 +141,9 @@
   },
   {
     "name": "gh-backup",
-    "rootPath": "/Users/joel/Documents/ProjectsPublic/gh-backup",
+    "rootPath": "/Users/joel/Documents/ProjectsPrivate/gh-backup",
     "paths": [],
-    "tags": ["projects-public", "python"],
+    "tags": ["projects-private", "python"],
     "enabled": true
   },
   {
