--- a/scripts/homebrew/Brewfile
+++ b/scripts/homebrew/Brewfile
@@ -24,8 +24,10 @@ brew "cookiecutter"
 brew "openldap"
 brew "curl"
 brew "delve"
+brew "diff-so-fancy"
 brew "docker"
 brew "docker-compose"
+brew "duf"
 brew "dust"
 brew "duti"
 brew "node"
@@ -39,6 +41,7 @@ brew "mpg123"
 brew "srt"
 brew "tesseract"
 brew "ffmpeg"
+brew "figlet"
 brew "freetds"
 brew "fzf"
 brew "gd"
@@ -46,11 +49,14 @@ brew "gh"
 brew "git"
 brew "go"
 brew "hunspell"
+brew "hyperfine"
 brew "imagemagick"
+brew "jdupes"
 brew "jq"
 brew "just"
 brew "krb5"
 brew "mcfly"
+brew "most"
 brew "pandoc"
 brew "parallel"
 brew "perl"
@@ -59,12 +65,14 @@ brew "pipx"
 brew "pnpm"
 brew "powerlevel10k"
 brew "prettier"
+brew "procs"
 brew "pybind11"
 brew "pyenv"
 brew "python@3.10"
 brew "python@3.11"
 brew "ripgrep"
 brew "ruby"
+brew "sd"
 brew "shellcheck"
 brew "speedtest-cli"
 brew "starship"
@@ -72,6 +80,7 @@ brew "stow"
 brew "the_silver_searcher"
 brew "thefuck"
 brew "tldr"
+brew "tokei"
 brew "trash"
 brew "tree"
 brew "typescript"
