update config after homebrew reinstallation

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -11,17 +11,14 @@ tap "oven-sh/bun"
 tap "romkatv/powerlevel10k"
 tap "yt-dlp/taps"
 brew "act"
-brew "apr-util"
 brew "bash"
 brew "bat"
-brew "berkeley-db", link: true
+brew "bat-extras"
 brew "broot"
-brew "harfbuzz"
 brew "chafa"
 brew "cmake"
 brew "sqlite"
 brew "cookiecutter"
-brew "openldap"
 brew "curl"
 brew "delve"
 brew "diff-so-fancy"
@@ -34,27 +31,20 @@ brew "node"
 brew "eslint"
 brew "eza"
 brew "fd"
-brew "unbound"
-brew "gnutls"
-brew "leptonica"
-brew "mpg123"
-brew "srt"
-brew "tesseract"
 brew "ffmpeg"
 brew "figlet"
-brew "freetds"
 brew "fzf"
-brew "gd"
 brew "gh"
 brew "git"
 brew "go"
+brew "golangci-lint"
 brew "hunspell"
 brew "hyperfine"
 brew "imagemagick"
 brew "jdupes"
 brew "jq"
 brew "just"
-brew "krb5"
+brew "kafka"
 brew "mas"
 brew "mcfly"
 brew "most"
@@ -63,22 +53,19 @@ brew "parallel"
 brew "perl"
 brew "php"
 brew "pipx"
-brew "pnpm"
-brew "powerlevel10k"
 brew "prettier"
 brew "procs"
 brew "pybind11"
 brew "pyenv"
-brew "python@3.10"
-brew "python@3.11"
 brew "ripgrep"
 brew "ruby"
 brew "sd"
 brew "shellcheck"
+brew "shfmt"
 brew "speedtest-cli"
 brew "starship"
-brew "stow"
-brew "the_silver_searcher"
+brew "terraform"
+brew "terragrunt"
 brew "thefuck"
 brew "tldr"
 brew "tokei"
@@ -86,13 +73,10 @@ brew "trash"
 brew "tree"
 brew "typescript"
 brew "unzip"
-brew "virtualenv"
 brew "vite"
+brew "watch"
 brew "yt-dlp"
 brew "zsh"
-brew "zsh-autopair"
-brew "eth-p/software/bat-extras"
-brew "oven-sh/bun/bun"
 cask "1password"
 cask "1password-cli"
 cask "alfred"
@@ -100,6 +84,7 @@ cask "backblaze"
 cask "backblaze-downloader"
 cask "chatgpt"
 cask "drawio"
+cask "dropbox"
 cask "font-3270-nerd-font"
 cask "font-agave-nerd-font"
 cask "font-anonymice-nerd-font"
@@ -150,17 +135,27 @@ cask "font-tinos-nerd-font"
 cask "font-ubuntu-mono-nerd-font"
 cask "font-ubuntu-nerd-font"
 cask "font-victor-mono-nerd-font"
-cask "git-credential-manager-core"
 cask "google-drive"
 cask "grammarly"
 cask "karabiner-elements"
 cask "keycastr"
+cask "lunar"
 cask "mactex"
+cask "microsoft-auto-update"
+cask "microsoft-excel"
+cask "microsoft-onenote"
+cask "microsoft-outlook"
+cask "microsoft-powerpoint"
+cask "microsoft-teams"
+cask "microsoft-word"
 cask "obsidian"
+cask "onedrive"
+cask "owncloud"
 cask "pycharm"
 cask "r"
 cask "rstudio"
 cask "visual-studio-code"
+cask "zoom"
 mas "1Password for Safari", id: 1569813296
 mas "Actions", id: 1586435171
 mas "AdBlock Pro", id: 1018301773
@@ -321,7 +316,6 @@ vscode "oven.bun-vscode"
 vscode "patbenatar.advanced-new-file"
 vscode "pflannery.vscode-versionlens"
 vscode "phplasma.csv-to-table"
-vscode "PKief.material-icon-theme"
 vscode "pmneo.tsimporter"
 vscode "quarto.quarto"
 vscode "qufiwefefwoyn.inline-sql-syntax"
