--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1640,5 +1640,6 @@
   "workbench.list.smoothScrolling": true, // Enable smooth scrolling in lists
   "workbench.settings.openDefaultSettings": false, // Don't open default settings
   "workbench.tree.indent": 20, // Set tree item indent size
-  "workbench.tree.renderIndentGuides": "always"
+  "workbench.tree.renderIndentGuides": "always",
+  "console-ninja.featureSet": "Community"
 }
